# just-coding

./: .gitignore
C++/GTK-App/: CMakeLists.txt  Makefile  main  main.cpp
C++/counting characters/: countingCharacters.cpp  countingFunctions.h
C++/data structures in C++/: messing with hash_tables.cpp
C++/faculdade/: test  test.cpp
C++/funcao-quadratica/: main  main.cpp
C++/messing-with-cmake/: CMakeLists.txt  main.cpp
C++/messing-with-cmake/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
C++/messing-with-cmake/_build/libs/: Makefile  cmake_install.cmake
C++/messing-with-cmake/chatGPT-docs/: add_library.md  add_subdirectory.md  library-target.md  target_link_directories().md
C++/messing-with-cmake/libs/: CMakeLists.txt  raizQuadrada.cpp  raizQuadrada.h
C++/messing-with-files/: main  main.cpp
C++/messing-with-json/: Makefile  main  main.cpp
C++/messing-with-smartPointers/: Makefile  main  main.cpp
C++/testando HashTable CPP/: hashtable.h  main.cpp  menu.h
C/arvoreBinaria/: main  main.c
C/brightness/: Makefile  chbacklight  main  main.c
C/calculo/: main  main.c
C/callback-functions/: main  main.c
C/changing array size/: main  main.c
C/curl/: file.txt  main  main.c  makefile
C/fibonacci recursion/: main  main.c
C/messing-with-apis/: Makefile  main.c
C/messing-with-fork/: main  main.c
C/messing-with-gcc/: main.c  mainDynamic  mainStatic
C/messing-with-json/: Makefile  main  main.c  test  test.c
C/messing-with-make/: Makefile
C/messing-with-ncurses/: Makefile  main  main.c
C/messing-with-stdarg.h/: main.c
(+177 files in other folders)
